[project]
name = "autogen-graphflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.6",
    "autogen-core>=0.5.6",
    "autogen-ext>=0.5.6",
    "litellm>=1.67.5",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "pip==25.1.1",
    "pyautogen>=0.9",
    "tiktoken>=0.9.0",
]
